Updating for Collections module with using fabric methods of Stream